style: fix global scrollbar

--- a/styles/global.css
+++ b/styles/global.css
@@ -6,8 +6,6 @@
 }
 
 html {
-  overflow: hidden;
-  height: 100%;
   margin: 0;
   padding: 0;
   border: none;
@@ -18,5 +16,4 @@ body {
   position: relative;
   /* box-sizing: border-box; */
   margin: 0;
-  height: 100%;
 }
